--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -28,6 +28,11 @@
             <div class="card-body">
               <h5 class="card-title"><%= article.title %></h5>
               <p class="card-text"><%= article.description %></p>
+              <a href="/articles/<%= article.slug %>" class="btn btn-primary">Read More</a>
+              <form action="/articles/<%= article.id %>?_method=DELETE"
+                method="POST">
+                <button type="submit" class="btn-danger">Delete</button>
+              </form>
               <p class="card-text"><small class="text-muted">Created at: <%= article.createdAt %></small></p>
             </div>
           </div>
