modification on new.ejs

--- a/views/articles/new.ejs
+++ b/views/articles/new.ejs
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div class="container article-container">
-    <h1 class="mt-5">New Articles</h1>
+    <h1 class="mt-5">New Articless</h1>
     
     <form action="/articles" method="POST">
       <%- include('_form_fields') %>
